adds changing backgrounds

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="utf-8">
     <title>Merchant of Mercury</title>
     <link href="./stylesheets/main.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Michroma" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet">
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
+    <script type="application/javascript" src="./bundle.js"></script>
   </head>
-  <body>
-    <h1>Game</h1>
+  <body class="bgimage-1">
+    <h1>Merchant of Mercury</h1>
     <content class="main-content">
       <section class="main-creator-links">
         <ul>
@@ -27,6 +34,7 @@
             <li>Avoid asteroids!</li>
           </ul>
         </section>
+        <hr/>
         <section class="main-info-controls">
           <ul>
             <li>Left/Right or A/D keys to move ship left and right</li>
