adds ship image

--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
     </content>
   </body>
   <div class="sprites">
-    <img src="assets/shipsprite.png">
+    <img id="spaceship-sprites" src="assets/spaceshipsprites.png">
   </div>
 </html>
