adds asteroid images + rotation of same

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script type="application/javascript" src="./bundle.js"></script>
   </head>
   <body class="bgimage-1">
+    <div class="sprites">
+      <img id="sprites1" src="assets/spaceshipsprites.png">
+    </div>
     <h1>Merchant of Mercury</h1>
     <content class="main-content">
       <section class="main-creator-links">
@@ -45,7 +48,4 @@
       </section>
     </content>
   </body>
-  <div class="sprites">
-    <img id="spaceship-sprites" src="assets/spaceshipsprites.png">
-  </div>
 </html>
