--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
   crossorigin="anonymous"></script>
     <script type="application/javascript" src="./bundle.js"></script>
+    <script type="application/javascript" src="thirdparty/keymaster.js"></script>
   </head>
   <body class="bgimage-1">
     <div class="sprites">
