game over screen

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         </ul>
       </section>
       <section class="main-canvas">
+        <div class="game-over hidden">
+          <h1> GAME OVER </h1>
+          <p> Sorry, you didn't make it through. Hit "r" to restart! </p>
+        </div>
         <canvas id="game-canvas"></canvas>
       </section>
       <section class="main-info">
