adds starfield, adds consistent use of space to fire

--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
           <p> Sorry, you didn't make it through. Hit "r" to restart! </p>
         </div>
         <canvas id="game-canvas"></canvas>
+        <div class="game-score">
+          <p> Score: <span class="score">0</span></p>
+          <p> Health: <span class="health">5</span></p>
+        </div>
       </section>
       <section class="main-info">
         <section class="main-info-legend">
           <ul>
-            <li>Get to the spaceport within the time limit!</li>
-            <li>Use boost gates to speed up & add time!</li>
-            <li>Shoot pirates and avoid their weapons!</li>
+            <!-- <li>Shoot pirates and avoid their missiles!</li> -->
             <li>Avoid asteroids!</li>
           </ul>
         </section>
