adds music and basic mute button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <li>Github</li>
           <li>Email</li>
           <li>LinkedIn</li>
+          <li id="audio-toggle">Sound</li>
         </ul>
       </section>
       <section class="main-canvas">
@@ -40,7 +41,6 @@
       <section class="main-info">
         <section class="main-info-legend">
           <ul>
-            <!-- <li>Shoot pirates and avoid their missiles!</li> -->
             <li>Avoid asteroids!</li>
           </ul>
         </section>
@@ -54,5 +54,6 @@
         </section>
       </section>
     </content>
+    <audio src="./assets/music/bgmusic.mp3" loop="true" autoplay="true" ></audio>
   </body>
 </html>
