--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   </head>
   <body class="bgimage-1">
     <div class="sprites">
-      <img id="sprites1" src="assets/spaceshipsprites.png">
+      <img id="sprites1" src="./assets/spaceshipsprites.png">
     </div>
     <h1>Merchant of Mercury</h1>
     <content class="main-content">
       <section class="main-creator-links">
         <ul>
-          <li>Github</li>
+          <li><a href="https://github.com/Bhammy/merchantofmercury/"><img src="./assets/GitHub_Logo_White.png" class="github-logo"/></a></li>
           <li>Email</li>
-          <li>LinkedIn</li>
+          <li><a href="https://www.linkedin.com/in/brendan-hamill-71079325/"><img src="./assets/linked-in-logo.png" class="linkedin-logo"/></a></li>
           <li id="audio-toggle">Sound</li>
         </ul>
       </section>
@@ -42,6 +42,7 @@
         <section class="main-info-legend">
           <ul>
             <li>Avoid asteroids!</li>
+            <li>Larger asteroids are harder to destroy.</li>
           </ul>
         </section>
         <hr/>
@@ -50,6 +51,12 @@
             <li>Left/Right or A/D keys to move ship left and right</li>
             <li>Up/Down or W/S keys to moveship up and down</li>
             <li>Space bar to fire</li>
+          </ul>
+        </section>
+        <section>
+          <hr />
+          <ul>
+            <li> See readme for asset credits. </li>
           </ul>
         </section>
       </section>
