styles contact logos

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <content class="main-content">
       <section class="main-creator-links">
         <ul>
-          <li><a href="https://github.com/Bhammy/merchantofmercury/"><img src="./assets/GitHub_Logo_White.png" class="github-logo"/></a></li>
-          <li>Email</li>
+          <li><a href="https://github.com/Bhammy/merchantofmercury/"><img src="./assets/github-mark.png" class="github-logo"/></a></li>
+          <li><a href="mailto:brenhamill@gmail.com"><img src="./assets/mail_logo.png" class="mail-logo"/></a></li>
           <li><a href="https://www.linkedin.com/in/brendan-hamill-71079325/"><img src="./assets/linked-in-logo.png" class="linkedin-logo"/></a></li>
-          <li id="audio-toggle">Sound</li>
+          <li id="audio-toggle"><img src="./assets/speaker.png" id="audio-logo" /></li>
         </ul>
       </section>
       <section class="main-canvas">
