adds initial pirate missile files

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body class="bgimage-1">
     <div class="sprites">
       <img id="sprites1" src="./assets/spaceshipsprites.png">
+      <img id="sprites2" src="./assets/shipsprite.png">
     </div>
     <h1>Merchant of Mercury</h1>
     <content class="main-content">
@@ -24,7 +25,7 @@
           <li><a href="https://github.com/Bhammy/merchantofmercury/"><img src="./assets/github-mark.png" class="github-logo"/></a></li>
           <li><a href="mailto:brenhamill@gmail.com"><img src="./assets/mail_logo.png" class="mail-logo"/></a></li>
           <li><a href="https://www.linkedin.com/in/brendan-hamill-71079325/"><img src="./assets/linked-in-logo.png" class="linkedin-logo"/></a></li>
-          <li id="audio-toggle"><img src="./assets/speaker.png" id="audio-logo" /></li>
+          <li id="audio-toggle"><img src="./assets/mute.png" id="audio-logo" /></li>
         </ul>
       </section>
       <section class="main-canvas">
@@ -61,6 +62,6 @@
         </section>
       </section>
     </content>
-    <audio src="./assets/music/bgmusic.mp3" loop="true" autoplay="true" ></audio>
+    <audio src="./assets/music/bgmusic.mp3" loop="true" ></audio>
   </body>
 </html>
