adjusts missile sprite and collision detection

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="sprites">
       <img id="sprites1" src="./assets/spaceshipsprites.png">
       <img id="sprites2" src="./assets/shipsprite.png">
+      <img id="sprites3" src="./assets/missilesprite.png">
     </div>
     <h1>Merchant of Mercury</h1>
     <content class="main-content">
