tweaks to pirate velocity; adds cursor to mute button

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
       <section class="main-info">
         <section class="main-info-legend">
           <ul>
-            <li>Avoid asteroids!</li>
-            <li>Larger asteroids are harder to destroy.</li>
+            <li>Avoid missiles and asteroids</li>
+            <li>Larger asteroids are harder to destroy</li>
+            <li>Pirates fire missiles; they are slow at first but gain speed</li>
           </ul>
         </section>
         <hr/>
@@ -52,7 +53,7 @@
           <ul>
             <li>Left/Right or A/D keys to move ship left and right</li>
             <li>Up/Down or W/S keys to moveship up and down</li>
-            <li>Space bar to fire</li>
+            <li>Hold space bar to fire</li>
           </ul>
         </section>
         <section>
