high score form now shows up conditionally; refactors ui methods to own file

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
       </section>
       <section class="main-canvas">
         <div class="game-over hidden">
-          <h1> GAME OVER </h1>
-          <p> Sorry, you didn't make it through. Hit "r" to restart! </p>
-          </br>
-          <div class="submit-score">
+            <h1> GAME OVER </h1>
+            <p> Sorry, you didn't make it through. Hit "r" to restart! </p>
+            </br>
+          <div class="submit-score hidden">
+            <p> Nice! You got a high score. </p>
             <form>
               </br>
               <label> Name:
