finishes high scores; high scores are asynchronously requested from Firebase server and built in hidden div. Submit form only shows up if beats the lowest high score.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         <div class="game-over hidden">
             <h1> GAME OVER </h1>
             <p> Sorry, you didn't make it through. Hit "r" to restart! </p>
-            </br>
+            <br />
           <div class="submit-score hidden">
-            <p> Nice! You got a high score. </p>
+            <hr />
+            <p> You got a high score! </p>
             <form>
               </br>
               <label> Name:
@@ -48,6 +49,14 @@
                 Submit
               </button>
             </form>
+          </div>
+          <div class="high-scores">
+            <hr />
+            <h3><b>High scores</b></h3>
+            <br />
+            <ul class="high-scores-list">
+
+            </ul>
           </div>
         </div>
         <canvas id="game-canvas"></canvas>
